Fix picture stretching and update seed data

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -11,14 +11,12 @@
   height: 60px;
   width: 100%;
   border: 1px solid #dcdee2;
-  margin-top: 5px;
 }
 
 .comments-box {
   width: 100%;
   height: 100%;
   resize:none;
-  padding-left: 10px;
 }
 
 .comments-container {
