--- a/app/assets/stylesheets/api/hover.scss
+++ b/app/assets/stylesheets/api/hover.scss
@@ -47,6 +47,11 @@
 }
 
 
-.picture-feed:hover, {
+.input-show-box::placeholder {
+  padding-top: 0.3vw;
+}
 
+.comments-box::placeholder {
+  position: relative;
+  top: -0.1vw;
 }
