--- a/app/assets/stylesheets/api/pictures.scss
+++ b/app/assets/stylesheets/api/pictures.scss
@@ -113,6 +113,7 @@
   height: 45px;
   width: 45px;
   margin: 10px;
+  object-fit: cover;
 }
 
 .pic-show-username, .pic-show-username-userpage {
