--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -117,6 +117,7 @@ input.nav-search[type="text"]{
   display: flex;
   justify-content: flex-start;
   margin: 0 80px 0 120px;
+  object-fit: cover;
 }
 
 .user-content{
